@@ -4,6 +4,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
+import org.synyx.urlaubsverwaltung.person.Person;
 import org.synyx.urlaubsverwaltung.person.Role;
 
 import java.util.Arrays;
@@ -14,6 +15,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
 import static org.synyx.urlaubsverwaltung.person.web.PersonPermissionsMapper.mapPermissionsDtoToRole;
 import static org.synyx.urlaubsverwaltung.person.web.PersonPermissionsMapper.mapRoleToPermissionsDto;
+import static org.synyx.urlaubsverwaltung.person.web.PersonPermissionsMapper.mapToPersonPermissionsDto;
 
 class PersonPermissionsMapperTest {
 
@@ -24,7 +26,6 @@ class PersonPermissionsMapperTest {
             arguments(PersonPermissionsRoleDto.SECOND_STAGE_AUTHORITY, List.of(Role.SECOND_STAGE_AUTHORITY)),
             arguments(PersonPermissionsRoleDto.BOSS, List.of(Role.BOSS)),
             arguments(PersonPermissionsRoleDto.OFFICE, List.of(Role.OFFICE)),
-            arguments(PersonPermissionsRoleDto.INACTIVE, List.of(Role.INACTIVE)),
             arguments(PersonPermissionsRoleDto.SICK_NOTE_VIEW_ADD_EDIT, List.of(
                 Role.SICK_NOTE_VIEW,
                 Role.SICK_NOTE_ADD,
@@ -49,6 +50,12 @@ class PersonPermissionsMapperTest {
     }
 
     @Test
+    void ensureInactivePermissionMapsToNoRoles() {
+        final List<Role> roles = mapPermissionsDtoToRole(List.of(PersonPermissionsRoleDto.INACTIVE));
+        assertThat(roles).isEmpty();
+    }
+
+    @Test
     void ensurePermissionsMappingToRolesContainsAllRolesInSortedOrder() {
         final List<PersonPermissionsRoleDto> permissions = Arrays.asList(PersonPermissionsRoleDto.values());
         final List<Role> roles = mapPermissionsDtoToRole(permissions);
@@ -63,7 +70,6 @@ class PersonPermissionsMapperTest {
             arguments(Role.SECOND_STAGE_AUTHORITY, List.of(PersonPermissionsRoleDto.SECOND_STAGE_AUTHORITY)),
             arguments(Role.BOSS, List.of(PersonPermissionsRoleDto.BOSS)),
             arguments(Role.OFFICE, List.of(PersonPermissionsRoleDto.OFFICE)),
-            arguments(Role.INACTIVE, List.of(PersonPermissionsRoleDto.INACTIVE)),
             arguments(Role.SICK_NOTE_VIEW, List.of(PersonPermissionsRoleDto.SICK_NOTE_VIEW_ADD_EDIT)),
             arguments(Role.SICK_NOTE_ADD, List.of(PersonPermissionsRoleDto.SICK_NOTE_VIEW_ADD_EDIT)),
             arguments(Role.SICK_NOTE_EDIT, List.of(PersonPermissionsRoleDto.SICK_NOTE_VIEW_ADD_EDIT)),
@@ -87,6 +93,29 @@ class PersonPermissionsMapperTest {
     void ensureRolesMappingToPermissionsContainsAllPermissions() {
         final List<Role> roles = Arrays.asList(Role.values());
         final List<PersonPermissionsRoleDto> permissions = mapRoleToPermissionsDto(roles);
-        assertThat(permissions).containsAll(Arrays.asList(PersonPermissionsRoleDto.values()));
+        final List<PersonPermissionsRoleDto> permissionsWithoutInactive = Arrays.stream(PersonPermissionsRoleDto.values())
+            .filter(permission -> !permission.equals(PersonPermissionsRoleDto.INACTIVE))
+            .toList();
+        assertThat(permissions).containsExactlyElementsOf(permissionsWithoutInactive);
+    }
+
+    @Test
+    void ensurePersonWithoutUserRoleIsMappedToInactivePermission() {
+        final Person person = new Person();
+        person.setPermissions(List.of());
+
+        final PersonPermissionsDto personPermissionsDto = mapToPersonPermissionsDto(person);
+        assertThat(personPermissionsDto.getPermissions()).containsExactly(PersonPermissionsRoleDto.INACTIVE);
+        assertThat(personPermissionsDto.getIsInactive()).isTrue();
+    }
+
+    @Test
+    void ensurePersonWithUserRoleIsNotMappedToInactivePermission() {
+        final Person person = new Person();
+        person.setPermissions(List.of(Role.USER, Role.OFFICE));
+
+        final PersonPermissionsDto personPermissionsDto = mapToPersonPermissionsDto(person);
+        assertThat(personPermissionsDto.getPermissions()).containsExactly(PersonPermissionsRoleDto.USER, PersonPermissionsRoleDto.OFFICE);
+        assertThat(personPermissionsDto.getIsInactive()).isFalse();
     }
 }
